Fixed some bugs on Firefox

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -50,6 +50,8 @@
     background-color: black;
     border: 3px solid #ddd;
     cursor: pointer;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .left-arrow {
